base/media/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/part-of: homelab
  annotations:
    cert-manager.io/cluster-issuer: stepca-acme
spec:
  ingressClassName: traefik
  rules:
    - host: radarr.sunnyside.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 80
  tls:
    - hosts:
        - radarr.sunnyside.home
      secretName: radarr-tls
